force-app/main/default/objects/CCX_Supplier__c/CCX_Supplier__c.object-meta.xml
<CustomObject>
    <label>CCX_Supplier</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>CCX_SupplierID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX_Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>