force-app/main/default/objects/CCX_Supplier__c/fields/Balance_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_To_Be_Paid__c</fullName>
    <formula>Total_Supplied_Amount__c -  Total_SAmount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance To Be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>