force-app/main/default/objects/CCX_Supplier__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <label>SupplierName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>