force-app/main/default/objects/CCX_Supplier__c/fields/Total_SAmount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_SAmount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total SAmount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>