force-app/main/default/objects/CCX_Supplier__c/fields/Total_Supplied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Supplied_Amount__c</fullName>
    <label>Total Supplied Amount</label>
    <summarizedField>CCX_PurchaseOrder__c.Net_Purchase_Total__c</summarizedField>
    <summaryForeignKey>CCX_PurchaseOrder__c.CCX_Supplier__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>