force-app/main/default/objects/CCX_Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_SAmount_Paid__c</columns>
    <columns>Total_Supplied_Amount__c</columns>
    <columns>Balance_To_Be_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>